fix: video is working on mobile version

--- a/css/components.css
+++ b/css/components.css
@@ -2,7 +2,7 @@
 
 @layer components {
   .heading {
-    @apply absolute top-1/2 -translate-y-1/2 text-[3rem] sm:text-[4.5rem] md:text-[6rem] bg-gradient-to-r from-[#AC90D9] via-[#EC8FCE] to-[#688FDD] md:from-[#ac90d9] md:via-white md:to-[#C8BCDC] inline-block text-transparent bg-clip-text bg-opacity-60 leading-none text-center font-bold md:font-extrabold;
+    @apply absolute top-1/2 -translate-y-1/2 text-[3rem] sm:text-[4.5rem] md:text-[6rem] bg-gradient-to-r from-[#ac90d9] via-white to-[#C8BCDC] inline-block text-transparent bg-clip-text bg-opacity-60 leading-none text-center font-bold md:font-extrabold;
   }
 
   .card {
